lander.lessons.lander.lvl1_lander_101.Lander101.scala.code
var vy = getVitesseY()
if (vy<=10) {

setPouseeDesiree(4)
}
else setPousseeDesiree(0)